--- a/source/styles/blocks/product-card.scss
+++ b/source/styles/blocks/product-card.scss
@@ -45,10 +45,25 @@
 }
 
 .product-card__button {
+  position: relative;
   min-height: 36px;
-  padding: 8px 20px;
+  padding: 8px 20px 8px 46px;
   font-size: 14px;
   line-height: 20px;
+}
+
+.product-card__button::before {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  width: 20px;
+  height: 16px;
+  background-color: $color-base-white;
+  content: "";
+  mask-image: url("../../icons/buttons/cart.svg");
+  mask-repeat: no-repeat;
+  mask-position: center;
+  mask-size: 20px 16px;
 }
 
 @media (min-width: $tablet-width) {
